app/javascript/flavours/glitch/styles/modern.scss
/* ... */
#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields
  dl
  dd.verified,
#mastodon .account__header__account-note dl dd.verified,
#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields.account__header__account-note.account__header__account-note
  dd.verified,
#mastodon
  .account__header__account-note.account__header__account-note.account__header__account-note
  dd.verified {
  overflow: visible !important;
  border: 0;
  background: none;
}

#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields
  dl
  dd.verified
  a::before,
#mastodon .account__header__account-note dl dd.verified a::before,
#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields.account__header__account-note.account__header__account-note
  dd.verified
  a::before,
#mastodon
  .account__header__account-note.account__header__account-note.account__header__account-note
  dd.verified
  a::before,
#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields
  dl
  dd.verified
  a::after,
#mastodon .account__header__account-note dl dd.verified a::after,
#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields.account__header__account-note.account__header__account-note
  dd.verified
  a::after,
#mastodon
  .account__header__account-note.account__header__account-note.account__header__account-note
  dd.verified
  a::after {
  content: '';
  position: absolute;
  inset: 0;
  background: currentcolor;
  opacity: 0.2;
}

#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields
  dl
  dd.verified
  a::after,
#mastodon .account__header__account-note dl dd.verified a::after,
#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields.account__header__account-note.account__header__account-note
  dd.verified
  a::after,
#mastodon
  .account__header__account-note.account__header__account-note.account__header__account-note
  dd.verified
  a::after {
  background: linear-gradient(20deg, currentcolor, transparent) !important;
  opacity: 0.2 !important;
  z-index: -2;
}

#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields.account__header__account-note.account__header__account-note,
#mastodon
  .account__header__account-note.account__header__account-note.account__header__account-note {
  display: flex;
  margin-bottom: 10px;
  gap: 0;
  border: 0;
  padding: 0 !important;
  margin-inline: 0 !important;
  background: none !important;
  border-radius: 8px;
  font-size: 12px;
  width: unset;
}

#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields.account__header__account-note.account__header__account-note
  label,
#mastodon
  .account__header__account-note.account__header__account-note.account__header__account-note
  label {
  z-index: 2;
  padding: 0 !important;
  padding-inline-end: 0.7em !important;
  pointer-events: none;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
  vertical-align: unset;
}

#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields.account__header__account-note.account__header__account-note:focus-within,
#mastodon
  .account__header__account-note.account__header__account-note.account__header__account-note:focus-within {
  padding: 0.5em 0.7em !important;
  margin-inline: -5px !important;
  border: 1px solid;
}

#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields.account__header__account-note.account__header__account-note:not(
    :focus-within
  ),
#mastodon
  .account__header__account-note.account__header__account-note.account__header__account-note:not(
    :focus-within
  ) {
  border-radius: 0;
  border-bottom: 1px solid;
  padding-bottom: 0.4em !important;
}

#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields.account__header__account-note.account__header__account-note
  textarea,
#mastodon
  .account__header__account-note.account__header__account-note.account__header__account-note
  textarea {
  width: 0;
  flex-grow: 1;
  border-radius: 0;
  margin: -100px !important;
  padding: 100px !important;
  padding-inline-end: 0.7em !important;
  margin-inline-end: -0.7em !important;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
  vertical-align: unset;
  background: none;
}

#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields.account__header__account-note.account__header__account-note
  textarea::placeholder,
#mastodon
  .account__header__account-note.account__header__account-note.account__header__account-note
  textarea::placeholder {
  font-weight: 600;
}

#mastodon
  :not(.admin-account-bio)
  > div
  > .account__header__fields.account__header__account-note.account__header__account-note
  label,
#mastodon
  .account__header__account-note.account__header__account-note.account__header__account-note
  label {
  margin: 0;
  font-weight: 600;
  padding-inline: 14px;
}

#mastodon .account__section-headline:not(:first-child, :nth-child(2)) {
  background: none;
  position: relative;
  z-index: 2;
}

.with-modals
  #mastodon
  .account__section-headline:not(:first-child, :nth-child(2)) {
  border: 0 !important;
}

#mastodon .account__section-headline:not(:first-child, :nth-child(2)) a,
#mastodon
  .account__section-headline:not(:first-child, :nth-child(2))
  button {
  background: none;
  border-radius: 0 !important;
}

#mastodon
  .account__section-headline:not(:first-child, :nth-child(2))
  a
  span,
#mastodon
  .account__section-headline:not(:first-child, :nth-child(2))
  button
  span {
  font-weight: 400;
  opacity: 0.7;
  transition: opacity 0.2s;
}

#mastodon
  .account__section-headline:not(:first-child, :nth-child(2))
  a.active
  span,
#mastodon
  .account__section-headline:not(:first-child, :nth-child(2))
  button.active
  span {
  font-weight: 700;
  opacity: 1;
}
/* ... */

